B-F Backup Sandbox 30.4.12/src/objects/Vendor__c.object
<CustomObject>
    <customHelpPage>vendorHelp</customHelpPage>
    <description>Vendor Master</description>
    <fields>
        <fullName>Accepts_Credit_Card__c</fullName>
        <label>Accepts Credit Card</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Group__c</fullName>
        <label>Account Group</label>
        <picklist>
            <controllingField>Approval_Status__c</controllingField>
            <picklistValues>
                <fullName>1 - Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Goods supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Alternative payee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Invoicing Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Forwarding agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Ordering address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0007 - Plants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Hierarchy Node</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 - Vendor distribution center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORP - Corporate Payee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPD - One-time vend.(int.no.assgnmt)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPDL - One-time vend.(ext.no.assgnmt)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DARL - Lender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMPL - Employee Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRED - Vendor (int.number assgnmnt)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIEF - Vendor (ext.number assgnmnt)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MNFR - Manufacturer (ext.no.assgnmnt)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHR - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PYRL - Payroll vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REIS - Commercial traveller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VEMP - Load of employees from legacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VEND - Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VERT - Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VLEN - Vendor Conversion acct grp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZTRV - B-F TR Y/E AP Closing Accts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZVCR - Carriers w/o Payment (Collect)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>If Vendor is being created field value should be &quot;New&quot; when saved.
Field is automatically updated.</inlineHelpText>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Address_STRAS__c</fullName>
        <description>Bank Address for US</description>
        <inlineHelpText>Bank address</inlineHelpText>
        <label>Bank Address</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_City_ORT01__c</fullName>
        <label>Bank City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Code__c</fullName>
        <label>Bank Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Country_Code__c</fullName>
        <label>Bank Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>US USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Utd.Arab.Emir.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG Antigua&amp;Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN Dutch Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS Samoa American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Bosnia-Herz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF Burkina-Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN Brunei Dar-es-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <description>Name of bank</description>
        <inlineHelpText>Name of bank</inlineHelpText>
        <label>Bank Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Postal_Code_PSTLZ__c</fullName>
        <label>Bank Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Region__c</fullName>
        <label>Bank Region</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Swift_Code__c</fullName>
        <label>Bank Swift Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Address_2_STRAS__c</fullName>
        <inlineHelpText>If needed.</inlineHelpText>
        <label>Business Address 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Address_STRAS__c</fullName>
        <description>House number and street</description>
        <inlineHelpText>Business address</inlineHelpText>
        <label>Business Address</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_City_ORT01__c</fullName>
        <label>Business City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Email_1__c</fullName>
        <label>Business Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Email_2__c</fullName>
        <label>Business Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Email_3__c</fullName>
        <label>Business Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Fax_1_Ext__c</fullName>
        <label>Business Fax 1 Ext</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Fax_2_Ext__c</fullName>
        <label>Business Fax 2 Ext</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Fax_2__c</fullName>
        <inlineHelpText>Please enter in nnn-nnn-nnnn format.</inlineHelpText>
        <label>Business Fax 2</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Fax_TELFX__c</fullName>
        <description>999-999-9999</description>
        <inlineHelpText>Please enter in nnn-nnn-nnnn format.</inlineHelpText>
        <label>Business Fax</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name_2__c</fullName>
        <label>Business Name 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name_3__c</fullName>
        <label>Business Name 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name_NAME1__c</fullName>
        <inlineHelpText>Company Name</inlineHelpText>
        <label>Business Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone_1_Ext__c</fullName>
        <label>Business Phone 1 Ext</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone_2_Ext__c</fullName>
        <label>Business Phone 2 Ext</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone_2__c</fullName>
        <inlineHelpText>Please enter in nnn-nnn-nnnn format.</inlineHelpText>
        <label>Business Phone 2</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone_TELF1__c</fullName>
        <inlineHelpText>Please enter in nnn-nnn-nnnn format.</inlineHelpText>
        <label>Business Phone</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Postal_Code_PSTLZ__c</fullName>
        <label>Business Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Region__c</fullName>
        <label>Business Region</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>US only</description>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>01 - Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - Fiduciary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 - Nominee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 - Government or int.organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 - &apos;Tax exempt&apos; organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 - Private foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 - Artist or athlete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19 - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - Type of recipient unknown</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_Management_Group__c</fullName>
        <label>Cash Management Group</label>
        <picklist>
            <controllingField>Approval_Status__c</controllingField>
            <picklistValues>
                <fullName>AP_ACHCR - A/P ACH CR transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP_ACHDB - A/P ACH DB transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP_CHECK - A/P check payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP_DWIRE - A/P Domestic Wire transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP_FWIRE - A/P Foreign Wire / Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR_ACHCR - A/R ACH CR transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR_ACHDB - A/R ACH DB transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR_CHECK - A/R check payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR_DWIRE - A/R Domestic Wire transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR_FWIRE - A/R Foreign Wire transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TR - TM Business Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commodity_Type__c</fullName>
        <label>Commodity  Type</label>
        <picklist>
            <controllingField>Commodity__c</controllingField>
            <picklistValues>
                <fullName>10100 - Grain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10150 - Malt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10200 - GNS/Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10300 - OTSOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10400 - High Fructose Corn Syrup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10500 - Sugar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10600 - Grapes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10700 - Bulk Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10999 - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20100 - Filters &amp; Filter  Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20200 - Activated Carbon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20300 - Fuel Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20999 - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21100 - Yeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21200 - Flavorings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21300 - Caramel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21400 - Acids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21999 - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22100 - Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22200 - Steel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22999 - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23100 - Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23150 - PET-Plastic Bottles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23170 - Aluminum  Cans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23200 - Corrugated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23250 - Hi Cone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23300 - Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23400 - Corks &amp; Corked Closures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23450 - Closures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23500 - Shrink bands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <label>Commodity</label>
        <picklist>
            <picklistValues>
                <fullName>Please Select</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10000 - Bulk Commodities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20000 - Process Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21000 - Ingredients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22000 - Cooperage Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23000 - Packaging  Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24000 - Misc. Production Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25000 - Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26000 - MRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27000 - Lab/ Medical Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28000 - Production Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29000 - Freight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30000 - Office Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31000 - Computer Equipment and Peripherals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32000 - Office Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33000 - Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34000 - Tele Comm Equipment and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35000 - Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40000 - Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41000 -  Marketing/Promotion/POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42000 - Leased Storage/Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43000 -  Memberships &amp; Subscriptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44000 - Outsourced Functions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45000 - Shipping &amp; Postage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>88888 - Foreign/Eastern Countries Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90000 - Uncategorized</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <picklist>
            <picklistValues>
                <fullName>1000 - Brown-Forman Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2300 - Sonoma-Cutrer Vineyards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2900 - Magnolia Investments Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000 - Jack Daniel Distillery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3200 - Early Times Distillers Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3300 - Canadian Mist Distillers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3500 - B-F Tequila Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3510 - Valle de Amatitan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3520 - Cosesa - BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4043 - B-F Worldwide Taiwan LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4060 - LLC Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4140 - Brown-Forman Shanghai LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4157 - Brown-Forman Korea LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4170 - Brown-Forman Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4190 - Brown-Forman Ukraine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4260 - Brown-Forman Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4645 - Brown-Forman Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4801 - Clintock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4810 - BF Czech &amp; Slovak Rep SRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4960 - FVW LTD.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4965 - Brown-Forman Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5540 - Brown-Forman Beverages Eu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5554 - Brown-Forman Nordic DF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5560 - BF Beverages Europe Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5590 - BF Polska Sp z.o.o.</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Copy_Business_Address_to_Payment_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Copy Business Name and Address to Payee Information</inlineHelpText>
        <label>Copy Business Name and Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Business_Address_to_Tax_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Business Address to Tax Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Business_Name_to_Business_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Business Name to Business/Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Payment_Address_to_Tax_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Payment Address to Tax Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Group__c</fullName>
        <description>SAP: LFA1 - KONZS</description>
        <label>Corporate Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>